Implemented MailService and messaging over ticket state changing